feat: Migrate tests to JUnit 5 and modernize codebase
- Updated UserControllerTest to use JUnit 5 annotations and Mockito extensions.
- Refactored test methods for clarity and added display names.
- Converted FileServiceTest to JUnit 5 with nested classes for organization.
- Removed outdated UserServiceSimpleTest and JwtUtilSimpleTest.
- Enhanced UserServiceTest with nested classes and improved assertions.
- Updated JwtUtilTest to use parameterized tests and nested structure.
- Added migration reports detailing changes and improvements.
- Introduced VSCode settings for Java development.
- Improved test coverage and organization across the codebase.